# cluster_embeddings

./: README.md  key_words.pt  key_words_clusters.json  key_words_clusters.txt  pyproject.toml
cluster_embeddings/: cluster_embeddings.py  spacy_ner.py
input_data/: key_words.h5  key_words.txt
output_data/: key_words.pt  key_words_clusters.json  key_words_clusters.txt
