[tool.poetry]
name = "cluster-embeddings"
version = "0.1.0"
description = ""
authors = ["Vladimir <vladimir.pereverzev@nvi-reseach.com>"]
readme = "README.md"
packages = [{include = "cluster_embeddings"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
h5py = "^3.12.1"
torch = "^2.6.0"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
